--- a/index.html
+++ b/index.html
@@ -1,1 +1,134 @@
-  delete
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shubham Singh - Manual Tester Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background: #f7f7f7;
+            color: #333;
+        }
+        header {
+            background: white;
+            border-bottom: 1px solid #ddd;
+            padding: 20px 30px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 30px;
+        }
+        header p {
+            margin: 5px 0 0;
+            font-size: 16px;
+            color: #555;
+        }
+        section {
+            max-width: 900px;
+            margin: auto;
+            background: white;
+            padding: 25px 30px;
+            margin-top: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.05);
+        }
+        h2 {
+            border-left: 4px solid #007bff;
+            padding-left: 10px;
+            color: #222;
+        }
+        ul {
+            padding-left: 18px;
+        }
+        li {
+            margin-bottom: 6px;
+        }
+        .skills span {
+            background: #007bff;
+            padding: 6px 12px;
+            margin: 5px;
+            border-radius: 5px;
+            color: white;
+            display: inline-block;
+        }
+        footer {
+            text-align: center;
+            padding: 15px;
+            margin-top: 30px;
+            background: white;
+            border-top: 1px solid #ddd;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Shubham Singh</h1>
+    <p>Manual Tester • QA Engineer</p>
+</header>
+
+<section>
+    <h2>About Me</h2>
+    <p>
+        I am Shubham Singh, a Manual Tester with hands-on experience in testing mobile applications
+        and websites. I completed my internship at Evify Logistic Pvt. Ltd. where I worked on testing
+        rider apps, employee apps, and internal management portals.
+        <br><br>
+        I focus on finding real-world issues, writing clear test cases, and ensuring products are stable,
+        user-friendly, and bug-free before release.
+    </p>
+</section>
+
+<section>
+    <h2>Experience</h2>
+    <p><strong>Evify Logistic Pvt. Ltd.</strong> – Manual Tester (Intern, 3 Months)</p>
+    <ul>
+        <li>Tested Rider Mobile Application (punch-in, punch-out, daily order tracking, earnings).</li>
+        <li>Tested Employee Application (attendance, tasks, employee data tracking).</li>
+        <li>Tested Hive Web Portal for managing riders & employee operations.</li>
+        <li>Performed functional, UI, regression, sanity, and exploratory testing.</li>
+        <li>Created test scenarios, test cases, and detailed bug reports.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Skills</h2>
+    <div class="skills">
+        <span>Manual Testing</span>
+        <span>Functional Testing</span>
+        <span>Regression Testing</span>
+        <span>Sanity & Smoke Testing</span>
+        <span>Exploratory Testing</span>
+        <span>UI/UX Testing</span>
+        <span>Test Case Writing</span>
+        <span>Bug Reporting</span>
+        <span>Postman (API Basics)</span>
+        <span>SDLC & STLC</span>
+        <span>Jira (Basics)</span>
+    </div>
+</section>
+
+<section>
+    <h2>Certificates</h2>
+    <ul>
+        <li>Manual Testing Course – TOPS Technologies</li>
+        <li>Internship Certificate – Evify Logistic Pvt. Ltd.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Contact</h2>
+    <p><strong>Email:</strong> mrjs1405@gmail.com</p>
+    <p><strong>Location:</strong> Surat, Gujarat, India</p>
+</section>
+
+<footer>
+    © 2025 Shubham Singh | Manual Tester Portfolio
+</footer>
+
+</body>
+</html>
