--- a/index.html
+++ b/index.html
@@ -114,11 +114,28 @@
 
 <section>
     <h2>Certificates</h2>
+
     <ul>
-        <li>Manual Testing Course – TOPS Technologies</li>
+        <li>
+            Manual Testing Course – TOPS Technologies  
+            <br>
+            <a href="tops_certificate_79775.pdf" target="_blank" style="color:#007bff;">
+                View TOPS Certificate (PDF)
+            </a>
+        </li>
+
+        <li>
+            NSDC Certificate  
+            <br>
+            <a href="nsdc_certificate_68524.pdf" target="_blank" style="color:#007bff;">
+                View NSDC Certificate (PDF)
+            </a>
+        </li>
+
         <li>Internship Certificate – Evify Logistic Pvt. Ltd.</li>
     </ul>
 </section>
+
 
 <section>
     <h2>Contact</h2>
